[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-benchmark-lab"
version = "0.1.0"
description = "Benchmark AI agent integrations: REST API vs CLI vs MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "mcp>=1.0.0",
    "openai>=1.50.0",
    "aiosqlite>=0.20.0",
    "prometheus-client>=0.21.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "anyio>=4.6.0",
    "types-aiofiles>=24.1.0",
]

[project.scripts]
ai-bench = "cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["api", "cli", "core", "mcp_server", "agent", "benchmarks", "metrics"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["api", "cli", "core", "mcp_server", "agent", "benchmarks", "metrics"]
omit = ["tests/*"]
